Avoid thumbnail overflow

--- a/ckanext/theme/fanstatic/theme.css
+++ b/ckanext/theme/fanstatic/theme.css
@@ -85,6 +85,7 @@ body, h1, h2, h3, h4, .btn {
 .dataset-item-content.image img.dataset-thumbnail {
     vertical-align: middle;
     max-height: 100%;
+    max-width: 100%;
 }
 
 /*** Tags clickables - Type de donnees ***/
